# bnb-rag-bot

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  DEPLOY_VERCEL_FIX.md  GITHUB.md  Procfile  README.md  TELEGRAM_COMO_RODAR.md  index.py  pyproject.toml  railway.toml  requirements.txt  run_bot.py  run_ngrok.ps1  run_platform_backend.py  run_platform_backend_production.py  run_production.py  vercel.json
.tmp/: products.json  products.json.example
adapters/: __init__.py  telegram_adapter.py  whatsapp_adapter.py
api/: index.py  index.py.bak  requirements.txt
core/: __init__.py  agent_runner.py
database/: migration_agents_embedding_namespace.sql  migration_agents_team_and_settings.sql  migration_documents.sql  schema.sql  schema_agent_per_channel.sql  schema_pgvector.sql  schema_usage.sql
directives/: audio_regras.md  billing_rules.md  create_agent_saas.md  create_tenant.md  envio_imagens.md  fechamento.md  message_buffering.md  pos_venda.md  rag_regras.md  sdr_personalidade.md  spin_selling.md  upload_documents_multi_tenant.md
docs/: AMBIENTE_SANDBOX_STAGING.md  ARQUITETURA_E_PIPELINE.md  BASE_DE_CONHECIMENTO.md  CONEXAO_TELEGRAM_DASHBOARD.md  DEPLOY_VERCEL.md  MIGRACOES_SUPABASE.md  SAAS_PLAN.md  VERCEL_CONECTAR_GIT.md
execution/: __init__.py  agent_facade.py  agent_memory.py  db_sessions.py  disconnect_all_bots.py  document_ingest.py  document_ingest_extended.py  drive_rag.py  knowledge_rag.py  llm_orchestrator.py  message_buffer.py  plan_limit_checker.py  state_machine.py  stt.py  supabase_schema.sql  supervisor.py  (+5 more)
(+74 files in other folders)
