[tool.poetry]
name = "bnb-rag-api"
version = "0.1.0"
description = "API for BNB RAG Bot"
authors = ["petriccone <your-email@example.com>"]

[project]
name = "bnb-rag-api"
version = "0.1.0"
description = "API for BNB RAG Bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=21.0",
    "openai>=1.40.0",
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.115.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "httpx>=0.25.0",
    "stripe>=8.0.0",
]

[tool.poetry.scripts]
app = "platform_backend.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
